Bug 194017 - Bad alignment of the progress bar on a file dialog still loading the file list
Summary: Bad alignment of the progress bar on a file dialog still loading the file list
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: 5.45.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2009-05-25 13:13 UTC by karaluh
Modified: 2021-04-19 15:47 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.82
Sentry Crash Report:


Attachments
Screenshot of the mentioned issue (44.49 KB, image/png)
2009-05-25 13:28 UTC, karaluh
Details
frameworks 5.45 on Arch Linux (167.24 KB, image/png)
2018-04-24 17:42 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description karaluh 2009-05-25 13:13:58 UTC
Version:            (using KDE 4.2.2)
OS:                Linux
Installed from:    Ubuntu Packages

See attached screenshot, the progress bar covers part of the dialog window.
Comment 1 karaluh 2009-05-25 13:28:05 UTC
Created attachment 33991 [details]
Screenshot of the mentioned issue
Comment 2 Thomas Richard 2009-05-26 16:48:40 UTC
I think this is one for kdelibs. The open file dialogue shows the same behaviour.
Comment 3 Nate Graham 2018-04-13 14:59:34 UTC
Is this still an issue with KDE Frameworks 5.44 or greater?
Comment 4 Patrick Silva 2018-04-24 17:42:41 UTC
Created attachment 112218 [details]
frameworks 5.45 on Arch Linux

Still valid on Arch Linux, frameworks 5.45.
Comment 5 Nate Graham 2018-04-24 17:51:20 UTC
Thanks for checking!
Comment 6 Ahmad Samir 2020-12-07 10:51:14 UTC
I tested and I don't see a progress bar at all, just a spinning mouse cursor. Is this still an issue?
Comment 7 Patrick Silva 2020-12-07 11:08:00 UTC
I see both spinning cursor and progress bar neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.1
Comment 8 Bug Janitor Service 2020-12-22 18:05:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/273
Comment 9 Ahmad Samir 2021-04-17 11:01:22 UTC
Git commit 7b1997933d1013f8a2e8cfd8ebd8c277c5622613 by Ahmad Samir.
Committed on 17/04/2021 at 11:01.
Pushed by ahmadsamir into branch 'master'.

KDirOperator: show the progress bar above the horizontal scrollbar

In compact view a horizontal scroll bar could be shown, adjust the position
of the progress bar in that case.

M  +27   -2    src/filewidgets/kdiroperator.cpp

https://invent.kde.org/frameworks/kio/commit/7b1997933d1013f8a2e8cfd8ebd8c277c5622613