KDirOperator: show the progress bar above the horizontal scrollbar

In compact view a horizontal scroll bar could be shown, adjust the position
of the progress bar in that case.

BUG: 194017